<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@color/black">
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:rotationX="0">

            <TextView
                android:id="@+id/textResult"
                android:layout_width="wrap_content"
                android:layout_height="79dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textSim"
                android:layout_width="wrap_content"
                android:layout_height="79dp"
                android:textAlignment="center"
                android:textColor="#E11C1C" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="79dp"
                android:textAlignment="center"
                android:textColor="#FF5722" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnDiv"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divide"
                android:textColor="#FF0000" />

            <Button
                android:id="@+id/buttonCE"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ce"
                android:textColor="#23D11D" />

        </TableRow>

        <TableRow
            android:layout_width="382dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/_7"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="41dp"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btnMul"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:text="@string/multiply"
                android:textColor="#FF0000" />
        </TableRow>

        <TableRow
            android:layout_width="400dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btnRest"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:textColor="#FF0000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btnAdd"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:text="@string/addition"
                android:textColor="#FF0000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnDot"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dot"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btnEqual"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equal"
                android:textColor="#FFFFFF" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
